# www_projekt

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
app/: __init__.py  extensions.py  seeds.py
app/models/: __init__.py  animal.py  conversation.py  farm.py  favorite.py  message.py  notification.py  user.py
app/routes/: __init__.py  animals.py  api.py  auth.py  chat.py  farms.py  favorites.py  main.py  map.py
app/schemas/: __init__.py  animal.py  farm.py
app/services/: __init__.py  geo.py  matching.py  pedigree.py  uploads.py
app/sockets/: __init__.py  chat.py  notifications.py
app/static/css/: style.css
app/static/img/stock/: README.md
app/static/img/stock/dog/: dog-02.avif  dog-08.avif
app/static/js/: chat.js  crop.js  main.js
app/templates/: _crop_assets.html  _flash.html  _footer.html  _macros.html  _navbar.html  base.html  dashboard.html  index.html  map.html  notifications.html
app/templates/animals/: form.html  list.html  matches.html  profile.html
app/templates/auth/: login.html  register.html
app/templates/chat/: index.html
app/templates/errors/: error.html
app/templates/farms/: edit.html  list.html  profile.html
app/templates/favorites/: index.html
docs/: MODEL_DANYCH.md
migrations/versions/: 7164b6e9dd2d_photo_pedigree_document_upload.py  ebbec637b60a_init_schema.py
tests/: test_smoke.py
